changed to webp

--- a/blackdoves.html
+++ b/blackdoves.html
@@ -2276,7 +2276,7 @@ limitations under the License.
     .h2,
     h2 {
       letter-spacing: 0
-    } 
+    }
 
     .h3,
     h3 {
@@ -2404,27 +2404,29 @@ limitations under the License.
       <p class="mb1">
       </p>
 
-      <p class="mb1">Netflix's Black Doves is a high-octane espionage series that's already making waves with critics and audiences
-      alike.
-      The show stars Keira Knightley as a fiercely intelligent and enigmatic operative balancing a life filled with
-      danger and
-      deception. Knightley's portrayal of a deeply layered character has been hailed as both intense and vulnerable,
-      perfectly
-      suited for the morally complex world of international espionage.
-</p>
+      <p class="mb1">Netflix's Black Doves is a high-octane espionage series that's already making waves with critics
+        and audiences
+        alike.
+        The show stars Keira Knightley as a fiercely intelligent and enigmatic operative balancing a life filled with
+        danger and
+        deception. Knightley's portrayal of a deeply layered character has been hailed as both intense and vulnerable,
+        perfectly
+        suited for the morally complex world of international espionage.
+      </p>
 
-      <p class="mb1">Set against the backdrop of modern London, the series weaves a tale of betrayal, secret missions, and
-      high-stakes drama.
-      With Ben Whishaw adding his trademark gravitas and Sarah Lancashire commanding the screen in a pivotal role, the
-      ensemble cast delivers performances that keep you on the edge of your seat.
-</p>
+      <p class="mb1">Set against the backdrop of modern London, the series weaves a tale of betrayal, secret missions,
+        and
+        high-stakes drama.
+        With Ben Whishaw adding his trademark gravitas and Sarah Lancashire commanding the screen in a pivotal role, the
+        ensemble cast delivers performances that keep you on the edge of your seat.
+      </p>
       <div class="my4 mxn3 center">
 
         <!-- Start Image with heading -->
         <figure class="ampstart-image-with-heading  m0 relative mb4">
-          <a href="https://www.netflix.com/watch/81931248?trackId=251726442" >
+          <a href="https://www.netflix.com/watch/81931248?trackId=251726442">
 
-            <amp-img src="./img/blackdoves/Black_Peace_Dove.svg.png" width="670" height="599"
+            <amp-img src="./img/blackdoves/Black_Peace_Dove.svg.webp" width="670" height="599"
               alt="Happy Hour Monday through Friday 5 PM" layout="responsive" style="background:#fff"></amp-img>
           </a>
           <figcaption class="absolute right-0 bottom-0 left-0">
@@ -2440,27 +2442,30 @@ limitations under the License.
 
       </div>
 
-      <p class="mb1">The show doesn’t shy away from exploring personal relationships amidst the chaos, adding emotional stakes to the
-      action-packed narrative. Intrigue and surprises abound, with stylish cinematography and a gripping pace that
-      make this a
-      must-watch.</p>
+      <p class="mb1">The show doesn’t shy away from exploring personal relationships amidst the chaos, adding emotional
+        stakes to the
+        action-packed narrative. Intrigue and surprises abound, with stylish cinematography and a gripping pace that
+        make this a
+        must-watch.</p>
       <p class="mb1">Critics have lauded Black Doves for its ability to seamlessly blend intense action sequences with
-      thought-provoking
-      themes about trust, loyalty, and survival. It's no wonder Netflix renewed it for a second season before the
-      first even
-      concluded.
-</p>
+        thought-provoking
+        themes about trust, loyalty, and survival. It's no wonder Netflix renewed it for a second season before the
+        first even
+        concluded.
+      </p>
 
 
-      <p class="mb1">The show features an impressive cast, including Ben Whishaw and Sarah Lancashire, and has received strong
-      critical
-      acclaim. On Rotten Tomatoes, it boasts a 98% approval rating, praised for its unique storytelling and
-      genre-blending
-      approach. Netflix has already renewed the series for a second season, reflecting its early success.
-      
-      If you're a fan of intense action and complex character dynamics, this could be a great series to check out!</p>
+      <p class="mb1">The show features an impressive cast, including Ben Whishaw and Sarah Lancashire, and has received
+        strong
+        critical
+        acclaim. On Rotten Tomatoes, it boasts a 98% approval rating, praised for its unique storytelling and
+        genre-blending
+        approach. Netflix has already renewed the series for a second season, reflecting its early success.
+
+        If you're a fan of intense action and complex character dynamics, this could be a great series to check out!</p>
       <p class="mb1"><a href="https://www.kqzyfj.com/click-101316119-11430556">
-        <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="" border="0" /></a></p>
+          <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="" border="0" /></a>
+      </p>
 
     </article>
   </main>
