--- a/index.html
+++ b/index.html
@@ -3571,7 +3571,7 @@ limitations under the License.
         the must-haves of this year.
       </p>
       <amp-img media="(min-width: 25.06rem)" class="cover max-width-4 mx-auto mt2" alt="Designer Brian Ebel."
-        width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce.jpg">
+        width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce.webp">
       </amp-img>
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
         Photo by: Mikel Laporte
@@ -3634,7 +3634,7 @@ limitations under the License.
     <div class="land-see-flying-carpet display-none">
       <amp-fx-flying-carpet height="300px">
         <amp-img alt="Designer Brian Ebel." class="cover" width="704" height="598" layout="fixed"
-          src="./img/land-see/content/shoe-designer-centered.jpg">
+          src="./img/land-see/content/shoe-designer-centered.webp">
         </amp-img>
       </amp-fx-flying-carpet>
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
@@ -3659,25 +3659,25 @@ limitations under the License.
         [slide]="selectedSlide" on="slideChange:AMP.setState({selectedSlide: event.index})" controls="" loop=""
         type="slides">
         <amp-img class="cover land-see-cover-position-bottom" alt="Omg, websites." width="813" height="480"
-          layout="responsive" src="./img/land-see/content/gallery/kim-0.jpg">
+          layout="responsive" src="./img/land-see/content/gallery/kim-0.webp">
         </amp-img>
         <amp-img class="cover" alt="Those websites are miiiiine.." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-1.jpg">
+          src="./img/land-see/content/gallery/kim-1.webp">
         </amp-img>
         <amp-img class="cover" alt="These websites are rad.." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-2.jpg">
+          src="./img/land-see/content/gallery/kim-2.webp">
         </amp-img>
         <amp-img class="cover" alt="Shoe designer self-portrait." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-5.jpg">
+          src="./img/land-see/content/gallery/kim-5.webp">
         </amp-img>
         <amp-img class="cover" alt="Those websites are rad.." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-3.jpg">
+          src="./img/land-see/content/gallery/kim-3.webp">
         </amp-img>
         <amp-img class="cover" alt="Matching accessories." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-6.jpg">
+          src="./img/land-see/content/gallery/kim-6.webp">
         </amp-img>
         <amp-img class="cover" alt="Sigh, having such amazing websites is almost a burden." width="813" height="480"
-          layout="responsive" src="./img/land-see/content/gallery/kim-4.jpg">
+          layout="responsive" src="./img/land-see/content/gallery/kim-4.webp">
         </amp-img>
       </amp-carousel>
       <div class="mx1">
@@ -3687,49 +3687,49 @@ limitations under the License.
               <amp-img class="cover land-see-cover-position-bottom land-see-selected-preview-image"
                 [class]="selectedSlide &#x3D;&#x3D; 0 ? &#39;cover land-see-cover-position-bottom land-see-selected-preview-image&#39; : &#39;cover land-see-cover-position-bottom&#39;"
                 alt="Go to slide 1" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-0.jpg">
+                src="./img/land-see/content/gallery/kim-0.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 1})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 1 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 2" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-1.jpg">
+                src="./img/land-see/content/gallery/kim-1.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 2})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 2 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 3" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-2.jpg">
+                src="./img/land-see/content/gallery/kim-2.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 3})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 3 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 4" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-5.jpg">
+                src="./img/land-see/content/gallery/kim-5.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 4})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 4 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 5" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-3.jpg">
+                src="./img/land-see/content/gallery/kim-3.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 5})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 5 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 6" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-6.jpg">
+                src="./img/land-see/content/gallery/kim-6.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 6})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 6 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 7" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-4.jpg">
+                src="./img/land-see/content/gallery/kim-4.webp">
               </amp-img>
             </button>
           </div>
@@ -3779,7 +3779,7 @@ limitations under the License.
         <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
           <li>
             <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
-              aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24"
+              aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.webp" width="24"
                 height="23.6" layout="fixed">
                 <title>TikTok</title>
               </amp-img>
@@ -3881,7 +3881,7 @@ limitations under the License.
     <amp-position-observer on="scroll:subscribeBGParallax.seekTo(percent=event.percent)" layout="nodisplay">
     </amp-position-observer>
     <amp-img alt="A view of the sea, see?" class="land-see-subscribe-bg cover" layout="fixed-height" height="679"
-      src="./img/land-see/content/khatam-tadayon-107740.jpg">
+      src="./img/land-see/content/khatam-tadayon-107740.webp">
     </amp-img>
   </div>
 
@@ -3901,8 +3901,8 @@ limitations under the License.
 
       <li>
         <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
-          aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24" height="23.6"
-            layout="fixed">
+          aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.webp" width="24"
+            height="23.6" layout="fixed">
             <title>TikTok</title>
 
           </amp-img></a>
