--- a/home.amp.html
+++ b/home.amp.html
@@ -2355,8 +2355,9 @@ limitations under the License.
 
     <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
       <li>
-        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Twitter"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="22.2" viewBox="0 0 53 49">
+        <a href="https://x.com/MNNWSPACE" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2"
+            viewBox="0 0 53 49">
             <title>Twitter</title>
             <path
               d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6"
@@ -2364,8 +2365,9 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML Instagram"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 54 54">
+        <a href="https://www.instagram.com/bcebel/" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+            viewBox="0 0 54 54">
             <title>instagram</title>
             <path
               d="M27.2 6.1c-5.1 0-5.8 0-7.8.1s-3.4.4-4.6.9c-1.2.5-2.3 1.1-3.3 2.2-1.1 1-1.7 2.1-2.2 3.3-.5 1.2-.8 2.6-.9 4.6-.1 2-.1 2.7-.1 7.8s0 5.8.1 7.8.4 3.4.9 4.6c.5 1.2 1.1 2.3 2.2 3.3 1 1.1 2.1 1.7 3.3 2.2 1.2.5 2.6.8 4.6.9 2 .1 2.7.1 7.8.1s5.8 0 7.8-.1 3.4-.4 4.6-.9c1.2-.5 2.3-1.1 3.3-2.2 1.1-1 1.7-2.1 2.2-3.3.5-1.2.8-2.6.9-4.6.1-2 .1-2.7.1-7.8s0-5.8-.1-7.8-.4-3.4-.9-4.6c-.5-1.2-1.1-2.3-2.2-3.3-1-1.1-2.1-1.7-3.3-2.2-1.2-.5-2.6-.8-4.6-.9-2-.1-2.7-.1-7.8-.1zm0 3.4c5 0 5.6 0 7.6.1 1.9.1 2.9.4 3.5.7.9.3 1.6.7 2.2 1.4.7.6 1.1 1.3 1.4 2.2.3.6.6 1.6.7 3.5.1 2 .1 2.6.1 7.6s0 5.6-.1 7.6c-.1 1.9-.4 2.9-.7 3.5-.3.9-.7 1.6-1.4 2.2-.7.7-1.3 1.1-2.2 1.4-.6.3-1.7.6-3.5.7-2 .1-2.6.1-7.6.1-5.1 0-5.7 0-7.7-.1-1.8-.1-2.9-.4-3.5-.7-.9-.3-1.5-.7-2.2-1.4-.7-.7-1.1-1.3-1.4-2.2-.3-.6-.6-1.7-.7-3.5 0-2-.1-2.6-.1-7.6 0-5.1.1-5.7.1-7.7.1-1.8.4-2.8.7-3.5.3-.9.7-1.5 1.4-2.2.7-.6 1.3-1.1 2.2-1.4.6-.3 1.6-.6 3.5-.7h7.7zm0 5.8c-5.4 0-9.7 4.3-9.7 9.7 0 5.4 4.3 9.7 9.7 9.7 5.4 0 9.7-4.3 9.7-9.7 0-5.4-4.3-9.7-9.7-9.7zm0 16c-3.5 0-6.3-2.8-6.3-6.3s2.8-6.3 6.3-6.3 6.3 2.8 6.3 6.3-2.8 6.3-6.3 6.3zm12.4-16.4c0 1.3-1.1 2.3-2.3 2.3-1.3 0-2.3-1-2.3-2.3 0-1.2 1-2.3 2.3-2.3 1.2 0 2.3 1.1 2.3 2.3z"
@@ -2392,8 +2394,8 @@ limitations under the License.
     <!-- Start Fullpage Hero -->
     <figure class="ampstart-image-fullpage-hero m0 relative mb4">
       <amp-img width="404" height="720" alt="Welcome to Beck &amp; Galo Modern American Cuisine" layout="responsive"
-        src="./img/themes_2/hero.jpg" media="(max-width: 415px)"></amp-img>
-      <amp-img height="720" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height" src="./img/themes_2/hero.jpg"
+        src="./img/themes_2/hero.webp" media="(max-width: 415px)"></amp-img>
+      <amp-img height="720" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height" src="./img/themes_2/hero.webp"
         media="(min-width: 416px)"></amp-img>
       <figcaption class="absolute top-0 right-0 bottom-0 left-0">
         <header class="p3">
@@ -2422,14 +2424,14 @@ limitations under the License.
         Welcome to the affiliate marketing space where your product takes center stage. This is the spot where I’ll
         feature your
         content in a way that’s engaging, professional, and designed to drive results.</p>
-<p class="mb1">
+      <p class="mb1">
         Your Product, Front and Center!
         Imagine this page showcasing your brand with eye-catching visuals, compelling descriptions, and strategic
         placement.
         I’ll craft content that highlights your product’s best features, connecting it with my audience in a way that
         resonates
         and inspires action.</p>
-<p class="mb1">
+      <p class="mb1">
         Affiliate Links for Seamless Conversions
         Your affiliate links will be prominently displayed here, allowing my audience to click through and make
         transactions
@@ -2454,7 +2456,7 @@ limitations under the License.
 
         <!-- Start Image with heading -->
         <figure class="ampstart-image-with-heading  m0 relative mb4">
-          <amp-img src="./img/themes_2/bar.jpg" width="600" height="450" alt="Happy Hour Monday through Friday 5 PM"
+          <amp-img src="./img/themes_2/bar.webp" width="600" height="450" alt="Happy Hour Monday through Friday 5 PM"
             layout="responsive"></amp-img>
           <figcaption class="absolute right-0 bottom-0 left-0">
             <header class="ampstart-image-heading px2 py2 line-height-4">
@@ -2471,17 +2473,17 @@ limitations under the License.
       <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
       <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
       <amp-carousel class="my2 mxn3" height="200" layout="fixed-height" type="carousel">
-        <amp-img src="./img/themes_2/hero.jpg" width="300" height="200" alt="Dining area" on="tap:lightbox"
+        <amp-img src="./img/themes_2/hero.webp" width="300" height="200" alt="Dining area" on="tap:lightbox"
           role="button" tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/bar.jpg" width="267" height="200" alt="Bar area" on="tap:lightbox" role="button"
+        <amp-img src="./img/themes_2/bar.webp" width="267" height="200" alt="Bar area" on="tap:lightbox" role="button"
           tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/waffles.jpg" width="300" height="200" alt="Caramel Banana Waffles"
+        <amp-img src="./img/themes_2/waffles.webp" width="300" height="200" alt="Caramel Banana Waffles"
           on="tap:lightbox" role="button" tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/soup.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
+        <amp-img src="./img/themes_2/soup.webp" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
           role="button" tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/steak.jpg" width="300" height="200" alt="Steak" on="tap:lightbox" role="button"
+        <amp-img src="./img/themes_2/steak.webp" width="300" height="200" alt="Steak" on="tap:lightbox" role="button"
           tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/pie.jpg" width="300" height="200" alt="Key Lime Pie" on="tap:lightbox"
+        <amp-img src="./img/themes_2/pie.webp" width="300" height="200" alt="Key Lime Pie" on="tap:lightbox"
           role="button" tabindex="0"></amp-img>
       </amp-carousel>
     </article>
