--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -3615,7 +3615,7 @@ limitations under the License.
         noloading="" controls="" loop="" type="slides">
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Bold Coast Cottage" width="1290"
-            height="680" layout="responsive" src="./img/land-see/content/maine.jpg">
+            height="680" layout="responsive" src="./img/land-see/content/maine.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3630,7 +3630,7 @@ limitations under the License.
         </div>
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Brian Ebel"
-            width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce2.jpg">
+            width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce2.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3647,7 +3647,7 @@ limitations under the License.
         </div>
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Skykomish River Valley "
-            width="1290" height="680" layout="responsive" src="./img/land-see/content/paul-summers.jpg">
+            width="1290" height="680" layout="responsive" src="./img/land-see/content/paul-summers.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3669,7 +3669,7 @@ limitations under the License.
         on="slideChange:AMP.setState({selectedSlide: event.index})" noloading="" controls="" loop="" type="slides">
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Brian Ebel"
-            width="1290" height="680" layout="responsive" src="./img/land-see/content/bce.jpg">
+            width="1290" height="680" layout="responsive" src="./img/land-see/content/bce.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3686,7 +3686,7 @@ limitations under the License.
         </div>
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Skykomish River Valley "
-            width="1290" height="680" layout="responsive" src="./img/land-see/content/paul-summers.jpg">
+            width="1290" height="680" layout="responsive" src="./img/land-see/content/paul-summers.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3702,7 +3702,7 @@ limitations under the License.
         </div>
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Bold Coast Cottage" width="1290"
-            height="680" layout="responsive" src="./img/land-see/content/maine.jpg">
+            height="680" layout="responsive" src="./img/land-see/content/maine.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3723,7 +3723,7 @@ limitations under the License.
         on="slideChange:AMP.setState({selectedSlide: event.index})" noloading="" controls="" loop="" type="slides">
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Designer Brian Ebel" width="auto"
-            height="278" layout="fixed-height" src="./img/land-see/content/bce.jpg">
+            height="278" layout="fixed-height" src="./img/land-see/content/bce.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 ">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3740,7 +3740,7 @@ limitations under the License.
         </div>
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image" alt="Skykomish River Valley " width="auto" height="278"
-            layout="fixed-height" src="./img/land-see/content/paul-summers.jpg">
+            layout="fixed-height" src="./img/land-see/content/paul-summers.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 ">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3756,7 +3756,7 @@ limitations under the License.
         </div>
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Bold Coast Cottage" width="auto"
-            height="278" layout="fixed-height" src="./img/land-see/content/maine.jpg">
+            height="278" layout="fixed-height" src="./img/land-see/content/maine.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 ">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3800,7 +3800,7 @@ limitations under the License.
         noloading="" controls="" loop="" type="slides">
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Skykomish River Valley "
-            width="1290" height="680" layout="responsive" src="./img/land-see/content/paul-summers.jpg">
+            width="1290" height="680" layout="responsive" src="./img/land-see/content/paul-summers.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3816,7 +3816,7 @@ limitations under the License.
         </div>
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Bold Coast Cottage" width="1290"
-            height="680" layout="responsive" src="./img/land-see/content/maine.jpg">
+            height="680" layout="responsive" src="./img/land-see/content/maine.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3831,7 +3831,7 @@ limitations under the License.
         </div>
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Brian Ebel"
-            width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce2.jpg">
+            width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce2.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3891,21 +3891,21 @@ limitations under the License.
   <section class="land-see-background-animation-container relative mx-auto my4">
     <a class="land-see-cta-link mx-auto" href="#">
       <amp-anim class="mt3 mb3" alt="Summer Sale!" media="(min-width: 611px)" width="813" height="342"
-        layout="responsive" src="./img/land-see/content/summer-sale-lg.jpg">
+        layout="responsive" src="./img/land-see/content/summer-sale-lg.webp">
         <amp-img placeholder="" alt="Summer Sale!" media="(min-width: 611px)" width="813" height="342"
-          layout="responsive" src="./img/land-see/content/summer-sale-lg.jpg">
+          layout="responsive" src="./img/land-see/content/summer-sale-lg.webp">
         </amp-img>
       </amp-anim>
       <amp-anim class="mt3 mb3" alt="Summer Sale!" media="(min-width: 361px) and (max-width: 610px)" width="610"
-        height="342" layout="responsive" src="./img/land-see/content/summer-sale-md.jpg">
+        height="342" layout="responsive" src="./img/land-see/content/summer-sale-md.webp">
         <amp-img placeholder="" alt="Summer Sale!" media="(min-width: 361px) and (max-width: 610px)" width="610"
-          height="342" layout="responsive" src="./img/land-see/content/summer-sale-md.jpg">
+          height="342" layout="responsive" src="./img/land-see/content/summer-sale-md.webp">
         </amp-img>
       </amp-anim>
       <amp-anim class="mt4 mb4" alt="Summer Sale!" media="(max-width: 360px)" width="329" height="348"
-        layout="responsive" src="./img/land-see/content/summer-sale-sm.jpg">
+        layout="responsive" src="./img/land-see/content/summer-sale-sm.webp">
         <amp-img placeholder="" alt="Summer Sale!" media="(max-width: 360px)" width="329" height="348"
-          layout="responsive" src="./img/land-see/content/summer-sale-sm.jpg">
+          layout="responsive" src="./img/land-see/content/summer-sale-sm.webp">
         </amp-img>
       </amp-anim>
     </a>
@@ -3937,7 +3937,7 @@ limitations under the License.
           class="px1 mt1 block align-top land-see-pre-animate land-see-post-item land-see-post-item-wide land-see-post-featured col land-see-recent">
           <a href="index.html" class="text-decoration-none">
             <amp-img class="land-see-post-image cover" alt="Studio Serif, interior." media="" width="409" height="305"
-              layout="responsive" src="./img/land-see/content/studio-310px.jpg">
+              layout="responsive" src="./img/land-see/content/studio-310px.webp">
             </amp-img>
           </a>
           <a class="land-see-post-category land-see-page-navigation inline-block pt1 underline caps"
@@ -3952,7 +3952,7 @@ limitations under the License.
           class="px1 mt1 block align-top land-see-pre-animate land-see-post-item land-see-post-item-wide land-see-post-featured col land-see-recent">
           <a href="index.html" class="text-decoration-none">
             <amp-img class="land-see-post-image cover" alt="Build a killer outfit." media="" width="409" height="370"
-              layout="responsive" src="./img/land-see/content/retail-shop-370px.jpg">
+              layout="responsive" src="./img/land-see/content/retail-shop-370px.webp">
             </amp-img>
           </a>
           <a class="land-see-post-category land-see-page-navigation inline-block pt1 underline caps"
@@ -3967,7 +3967,7 @@ limitations under the License.
           <a href="index.html" class="text-decoration-none">
             <amp-img class="land-see-post-image cover" alt="Feel the sand on your feet, not your wardrobe weight."
               media="" width="409" height="370" layout="responsive"
-              src="./img/land-see/content/travel-accessories-outfits-2-400px.jpg">
+              src="./img/land-see/content/travel-accessories-outfits-2-400px.webp">
             </amp-img>
           </a>
           <a class="land-see-post-category land-see-page-navigation inline-block pt1 underline caps"
@@ -3981,7 +3981,7 @@ limitations under the License.
           class="px1 mt1 block align-top land-see-pre-animate land-see-post-item land-see-post-item-wide col col-6 land-see-recent">
           <a href="index.html" class="text-decoration-none">
             <amp-img class="land-see-post-image cover" alt="Epression of aesthetics." media="" width="409" height="305"
-              layout="responsive" src="./img/land-see/content/timeless-design-350px.jpg">
+              layout="responsive" src="./img/land-see/content/timeless-design-350px.webp">
             </amp-img>
           </a>
           <a class="land-see-post-category land-see-page-navigation inline-block pt1 underline caps"
@@ -4120,21 +4120,21 @@ limitations under the License.
 
   <a class="land-see-cta-link mx-auto" href="https://www.instagram.com/lifeatgoogle/">
     <amp-anim class="mt3 mb3" alt="Instagram, follow us!" media="(min-width: 608px)" width="813" height="270"
-      layout="responsive" src="./img/land-see/content/instagram-cta-lg.png">
+      layout="responsive" src="./img/land-see/content/instagram-cta-lg.webp">
       <amp-img placeholder="" alt="Instagram, follow us!" media="(min-width: 608px)" width="813" height="270"
-        layout="responsive" src="./img/land-see/content/instagram-cta-lg.png">
+        layout="responsive" src="./img/land-see/content/instagram-cta-lg.webp">
       </amp-img>
     </amp-anim>
     <amp-anim class="mt3 mb3" alt="Instagram, follow us!" media="(min-width: 361px) and (max-width: 607px)" width="607"
-      height="282" layout="responsive" src="./img/land-see/content/instagram-cta-md.png">
+      height="282" layout="responsive" src="./img/land-see/content/instagram-cta-md.webp">
       <amp-img placeholder="" alt="Instagram, follow us!" media="(min-width: 361px) and (max-width: 607px)" width="607"
-        height="282" layout="responsive" src="./img/land-see/content/instagram-cta-md.png">
+        height="282" layout="responsive" src="./img/land-see/content/instagram-cta-md.webp">
       </amp-img>
     </amp-anim>
     <amp-anim class="mt4 mb4" alt="Instagram, follow us!" media="(max-width: 360px)" width="328" height="210"
-      layout="responsive" src="./img/land-see/content/instagram-cta-sm.png">
+      layout="responsive" src="./img/land-see/content/instagram-cta-sm.webp">
       <amp-img placeholder="" alt="Instagram, follow us!" media="(max-width: 360px)" width="328" height="210"
-        layout="responsive" src="./img/land-see/content/instagram-cta-sm.png">
+        layout="responsive" src="./img/land-see/content/instagram-cta-sm.webp">
       </amp-img>
     </amp-anim>
   </a>
@@ -4186,7 +4186,7 @@ limitations under the License.
     <amp-position-observer on="scroll:subscribeBGParallax.seekTo(percent=event.percent)" layout="nodisplay">
     </amp-position-observer>
     <amp-img alt="A view of the sea, see?" class="land-see-subscribe-bg cover" layout="fixed-height" height="679"
-      src="./img/land-see/content/khatam-tadayon-107740.jpg">
+      src="./img/land-see/content/khatam-tadayon-107740.webp">
 
     </amp-img>
   </div>
