--- a/pets-completed.html
+++ b/pets-completed.html
@@ -135,7 +135,7 @@
 <body>
   <!-- Cover page -->
   <amp-story standalone title="Joy of Tea" publisher="AMP tutorials"
-    publisher-logo-src="assets/AMP-Brand-White-Icon.svg" poster-portrait-src="assets/cover.jpg">
+    publisher-logo-src="assets/AMP-Brand-White-Icon.svg" poster-portrait-src="assets/cover.webp">
     <amp-story-page id="cover">
       <amp-story-grid-layer template="fill">
         <amp-img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" layout="responsive">
@@ -151,7 +151,7 @@
     <amp-story-page id="page1">
       <amp-story-grid-layer template="vertical">
         <h1>Cats</h1>
-        <amp-img src="assets/cat.jpg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/cat.webp" width="720" height="1280" layout="responsive">
         </amp-img>
         <q>Dogs come when they're called. Cats take a message and get back to you. --Mary Bly</q>
       </amp-story-grid-layer>
@@ -160,7 +160,7 @@
     <!-- Page 2 (Dog): 2 layers (fill + thirds) -->
     <amp-story-page id="page2">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/dog.jpg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/dog.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="thirds">
@@ -174,7 +174,7 @@
     <!-- Page 3 (Bird): 3 layers (fill + vertical + vertical) + Audio-->
     <amp-story-page id="page3" background-audio="assets/bird-singing.mp3">
       <amp-story-grid-layer template="fill">
-        <amp-img src="assets/bird.jpg" width="720" height="1280" layout="responsive">
+        <amp-img src="assets/bird.webp" width="720" height="1280" layout="responsive">
         </amp-img>
       </amp-story-grid-layer>
       <amp-story-grid-layer template="vertical">
@@ -189,7 +189,7 @@
     <!-- Page 4 (Rabbit): 3 layers (fill (video) + vertical + vertical) -->
     <amp-story-page id="page4">
       <amp-story-grid-layer template="fill">
-        <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.jpg" layout="responsive">
+        <amp-video autoplay loop width="720" height="1280" poster="assets/rabbit.webp" layout="responsive">
           <source src="assets/rabbit.mp4" type="video/mp4">
         </amp-video>
       </amp-story-grid-layer>
@@ -206,16 +206,16 @@
     <amp-story-page id="page5">
       <amp-story-grid-layer template="vertical" class="noedge">
         <div class="wrapper">
-          <amp-img src="assets/cat.jpg" width="720" height="1280" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/cat.webp" width="720" height="1280" layout="responsive" animate-in="fade-in"
             animate-in-delay="0.4s">
           </amp-img>
-          <amp-img src="assets/dog.jpg" width="720" height="1280" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/dog.webp" width="720" height="1280" layout="responsive" animate-in="fade-in"
             animate-in-delay="0.6s">
           </amp-img>
-          <amp-img src="assets/bird.jpg" width="720" height="1280" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/bird.webp" width="720" height="1280" layout="responsive" animate-in="fade-in"
             animate-in-delay=".8s">
           </amp-img>
-          <amp-img src="assets/rabbit.jpg" width="720" height="1280" layout="responsive" animate-in="fade-in"
+          <amp-img src="assets/rabbit.webp" width="720" height="1280" layout="responsive" animate-in="fade-in"
             animate-in-delay="1s">
           </amp-img>
         </div>
