--- a/stories.amp.html
+++ b/stories.amp.html
@@ -3820,7 +3820,7 @@ limitations under the License.
     <amp-position-observer on="scroll:subscribeBGParallax.seekTo(percent=event.percent)" layout="nodisplay">
     </amp-position-observer>
     <amp-img alt="A view of the sea, see?" class="land-see-subscribe-bg cover" layout="fixed-height" height="679"
-      src="./img/land-see/content/khatam-tadayon-107740.jpg">
+      src="./img/land-see/content/khatam-tadayon-107740.webp">
     </amp-img>
   </div>
 
@@ -3839,8 +3839,8 @@ limitations under the License.
       </li>
       <li>
         <a href="https://www.tiktok.com/@m_n_n_w" target="_blank" class="inline-block p1"
-          aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.png" width="24" height="22.2"
-            viewBox="0 0 53 49">
+          aria-label="Link to AMP HTML TikTok"><amp-img src="./img/land-see/content/tiktok.webp" width="24"
+            height="22.2" viewBox="0 0 53 49">
             <title>Twitter</title>
             <path
               d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6"
