--- a/stories.amp.html
+++ b/stories.amp.html
@@ -3556,7 +3556,7 @@ limitations under the License.
           <!-- End Dropdown-inline -->
         </li>
         <li class="ampstart-nav-item land-see-sidebar-nav-item ampstart-title-sm bold">
-          <a class="ampstart-nav-link" href="home.amp.html" Shop></a>
+          <a class="ampstart-nav-link" href="home.amp.html">Shop></a>
         </li>
         <li class="ampstart-nav-item land-see-sidebar-nav-item ampstart-title-sm bold">
           <a class="ampstart-nav-link" href="home.amp.html">Shop</a>
