--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@ limitations under the License.
   <link rel="canonical" href="index.html" />
   <meta name="viewport" content="width=device-width" />
   <meta name="amp-google-client-id-api" content="googleanalytics" />
+  <meta name="description"
+    content="MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
+  <meta name="keywords"
+    content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
+  <meta name="author" content="MINNOWSPACE">
+
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
@@ -3570,7 +3576,7 @@ limitations under the License.
         website
         the must-haves of this year.
       </p>
-      <amp-img media="(min-width: 25.06rem)" class="cover max-width-4 mx-auto mt2" alt="Designer Brian Ebel."
+      <amp-img media="(min-width: 25.06rem)" class="cover max-width-4 mx-auto mt2" alt="Brian Ebel."
         width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce.webp">
       </amp-img>
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
@@ -3633,7 +3639,7 @@ limitations under the License.
     </p>
     <div class="land-see-flying-carpet display-none">
       <amp-fx-flying-carpet height="300px">
-        <amp-img alt="Designer Brian Ebel." class="cover" width="704" height="598" layout="fixed"
+        <amp-img alt="Brian Ebel" class="cover" width="704" height="598" layout="fixed"
           src="./img/land-see/content/shoe-designer-centered.webp">
         </amp-img>
       </amp-fx-flying-carpet>
