--- a/tea.html
+++ b/tea.html
@@ -24,7 +24,11 @@ limitations under the License.
   <link rel="canonical" href="https://www.ampstart.com/templates/themes_2/home.amp">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
-
+  <meta name="description"
+    content="Tea - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
+  <meta name="keywords"
+    content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
+  <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
 
