--- a/index.html
+++ b/index.html
@@ -3857,7 +3857,7 @@ limitations under the License.
       </amp-list>
     </div>
   </section>
-<form method="post" action-xhr="https://vercel.com/bcebels-projects/amp-email-collector/subscribe" target="_top">
+<form method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top">
   <div class="ampstart-input inline-block relative m0 p0 mb3">
     <input type="email" name="email" id="email" class="block border-none p0 m0"
       placeholder="Enter email address to subscribe" required />
