--- a/index.html
+++ b/index.html
@@ -3879,6 +3879,11 @@ limitations under the License.
   </div>
 </form>
 
+<form method="post" action="https://amp-email-collector.vercel.app/subscribe" target="_top">
+  <input type="email" name="email" required placeholder="Enter email address to subscribe" />
+  <button type="submit">Subscribe</button>
+</form>
+
   <div class="land-see-subscribe center items-center max-width-4 mx-auto m0 mb3 z1">
     <div class="land-see-subscribe-form z2">
       <form method="GET" action="index.html" target="_top" class="p0 m0 px3 mb4">
