--- a/index.html
+++ b/index.html
@@ -3878,8 +3878,10 @@ limitations under the License.
     </template>
   </div>
 </form>
+<form method="post" action="https://amp-email-collector.vercel.app/subscribe"
+  action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top" novalidate
+  class="i-amphtml-form i-amphtml-error user-valid amp-form-submitting">
 
-<form method="post" action="https://amp-email-collector.vercel.app/subscribe" target="_top">
   <input type="email" name="email" required placeholder="Enter email address to subscribe" />
   <button type="submit">Subscribe</button>
 </form>
