--- a/index.html
+++ b/index.html
@@ -3857,6 +3857,7 @@ limitations under the License.
       </amp-list>
     </div>
   </section>
+
 <form method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top">
   <div class="ampstart-input inline-block relative m0 p0 mb3">
     <input type="email" name="email" id="email" class="block border-none p0 m0"
@@ -3878,7 +3879,8 @@ limitations under the License.
     </template>
   </div>
 </form>
-<form method="post" action="https://amp-email-collector.vercel.app/subscribe"
+
+<form method="post" 
   action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top" novalidate
   class="i-amphtml-form i-amphtml-error user-valid amp-form-submitting">
 
