--- a/index.html
+++ b/index.html
@@ -3883,19 +3883,34 @@ limitations under the License.
 
   <div class="land-see-subscribe center items-center max-width-4 mx-auto m0 mb3 z1">
     <div class="land-see-subscribe-form z2">
-      <form method="GET" action="index.html" target="_top" class="p0 m0 px3 mb4">
+<form method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top">
         <fieldset class="border-none p0 m0">
           <h2 class="land-see-subs-heading-text">
             Weekly inspiration from <span class="bold">MINNOWSPACE</span>
           </h2>
 
           <!-- Start Input -->
-          <div class="ampstart-input inline-block relative m0 p0 mb3">
-            <input type="email" value="" name="email" id="email" class="block border-none p0 m0"
-              placeholder="Enter email address to subscribe" />
-            <label for="email" class="absolute top-0 right-0 bottom-0 left-0" aria-hidden="true">Enter email address to
-              subscribe</label>
-          </div>
+  <div class="ampstart-input inline-block relative m0 p0 mb3">
+    <input type="email" name="email" id="email" class="block border-none p0 m0"
+      placeholder="Enter email address to subscribe" required />
+  </div>
+  <button type="submit" class="ampstart-btn caps">Subscribe</button>
+  
+  <!-- Success message -->
+  <div submit-success>
+    <template type="amp-mustache">
+      Subscription successful! Thank you for subscribing.
+    </template>
+  </div>
+  
+  <!-- Error message -->
+  <div submit-error>
+    <template type="amp-mustache">
+      Something went wrong: {{message}}.
+    </template>
+  </div>
+  </form>
+
           <!-- End Input-->
 
           <!-- Start Input -->
