--- a/index.html
+++ b/index.html
@@ -3355,6 +3355,37 @@ limitations under the License.
 </head>
 
 <body class="land-see">
+  <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
+  {
+    "vars": {
+      "gtag_id": "G-13W3NQ36KF",
+      "config": {
+        "G-13W3NQ36KF": {
+          "groups": "default"
+        }
+      }
+    },
+  
+  "triggers": {
+    "iniLoad": {
+      "on": "ini-load",
+      "request": "request"
+    },
+     "scrollPings": {
+      "on": "scroll",
+      "scrollSpec": {
+        "verticalBoundaries": [25, 50, 90],
+        "horizontalBoundaries": [10,20,30,40,50,60,70,80,90]
+      },
+      "request": "event"
+    }
+  }
+  }
+  </script>
+  </amp-analytics>
+
+
   <amp-animation id="recommendedSlideIn" layout="nodisplay">
     <script type="application/json">
         {
@@ -3576,8 +3607,8 @@ limitations under the License.
         website
         the must-haves of this year.
       </p>
-      <amp-img media="(min-width: 25.06rem)" class="cover max-width-4 mx-auto mt2" alt="Brian Ebel."
-        width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce.webp">
+      <amp-img media="(min-width: 25.06rem)" class="cover max-width-4 mx-auto mt2" alt="Brian Ebel." width="1000"
+        height="1000" layout="responsive" src="./img/land-see/content/bce.webp">
       </amp-img>
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
         Photo by: Mikel Laporte
@@ -3863,43 +3894,43 @@ limitations under the License.
 
   <div class="land-see-subscribe center items-center max-width-4 mx-auto m0 mb3 z1">
     <div class="land-see-subscribe-form z2">
-<form method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top">
+      <form method="post" action-xhr="https://amp-email-collector.vercel.app/subscribe" target="_top">
         <fieldset class="border-none p0 m0">
           <h2 class="land-see-subs-heading-text">
             Weekly inspiration from <span class="bold">MINNOWSPACE</span>
           </h2>
 
           <!-- Start Input -->
-  <div class="ampstart-input inline-block relative m0 p0 mb3">
-    <input type="email" name="email" id="email" class="block border-none p0 m0"
-      placeholder="Enter email address to subscribe" required />
-  </div>
-  <button type="submit" class="ampstart-btn caps">Subscribe</button>
-  
-  <!-- Success message -->
-  <div submit-success>
-    <template type="amp-mustache">
-      Subscription successful! Thank you for subscribing.
-    </template>
-  </div>
-  
-  <!-- Error message -->
-  <div submit-error>
-    <template type="amp-mustache">
-      Something went wrong: {{message}}.
-    </template>
-  </div>
-  </form>
-
-          <!-- End Input-->
-
-          <!-- Start Input -->
           <div class="ampstart-input inline-block relative m0 p0 mb3">
-            <input type="submit" value="" name="submit" id="submit" class="block border-none p0 m0" placeholder="" />
-            <label for="submit" class="absolute top-0 right-0 bottom-0 left-0" aria-hidden="true"></label>
+            <input type="email" name="email" id="email" class="block border-none p0 m0"
+              placeholder="Enter email address to subscribe" required />
           </div>
-          <!-- End Input-->
-        </fieldset>
+          <button type="submit" class="ampstart-btn caps">Subscribe</button>
+
+          <!-- Success message -->
+          <div submit-success>
+            <template type="amp-mustache">
+              Subscription successful! Thank you for subscribing.
+            </template>
+          </div>
+
+          <!-- Error message -->
+          <div submit-error>
+            <template type="amp-mustache">
+              Something went wrong: {{message}}.
+            </template>
+          </div>
+      </form>
+
+      <!-- End Input-->
+
+      <!-- Start Input -->
+      <div class="ampstart-input inline-block relative m0 p0 mb3">
+        <input type="submit" value="" name="submit" id="submit" class="block border-none p0 m0" placeholder="" />
+        <label for="submit" class="absolute top-0 right-0 bottom-0 left-0" aria-hidden="true"></label>
+      </div>
+      <!-- End Input-->
+      </fieldset>
       </form>
     </div>
     <amp-position-observer on="scroll:subscribeBGParallax.seekTo(percent=event.percent)" layout="nodisplay">
