--- a/index.html
+++ b/index.html
@@ -3361,9 +3361,9 @@ limitations under the License.
     <script type="application/json">
   {
     "vars": {
-      "gtag_id": "G-13W3NQ36KF",
+      "gtag_id": "G-V3TNNSX3H4",
       "config": {
-        "G-13W3NQ36KF": {
+        "G-V3TNNSX3H4": {
           "groups": "default"
         }
       }
