--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ limitations under the License.
     data-cmp-host="c.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
+<!-- AMP Analytics -->
+<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
   <style amp-boilerplate="">
     body {
@@ -3357,35 +3359,11 @@ limitations under the License.
 </head>
 
 <body class="land-see">
-  <amp-analytics type="gtag" data-credentials="include">
-    <script type="application/json">
-  {
-    "vars": {
-      "gtag_id": "G-V3TNNSX3H4",
-      "config": {
-        "G-V3TNNSX3H4": {
-          "groups": "default"
-        }
-      }
-    },
-  
-  "triggers": {
-    "iniLoad": {
-      "on": "ini-load",
-      "request": "request"
-    },
-     "scrollPings": {
-      "on": "scroll",
-      "scrollSpec": {
-        "verticalBoundaries": [25, 50, 90],
-        "horizontalBoundaries": [10,20,30,40,50,60,70,80,90]
-      },
-      "request": "event"
-    }
-  }
-  }
-  </script>
-  </amp-analytics>
+
+  <!-- Google Tag Manager -->
+  <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
+    data-credentials="include"></amp-analytics>
+
 
 
   <amp-animation id="recommendedSlideIn" layout="nodisplay">
