blockquote bad link

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ limitations under the License.
     data-cmp-host="c.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-  <!-- AMP Analytics -->
-  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+<!-- AMP Analytics -->
+<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
   <style amp-boilerplate="">
     body {
@@ -3215,18 +3215,6 @@ limitations under the License.
       line-height: normal;
     }
 
-    .land-see-blockquote:before {
-      content: '';
-      background: url(./img/land-see/structure/green-up-full-20.svg) 0 0/198px 156px no-repeat;
-      position: absolute;
-      top: 50%;
-      left: 1rem;
-      width: 198px;
-      height: 157px;
-      transform: rotate(90deg) translate(-40%);
-      opacity: 0.2;
-      z-index: -1;
-    }
 
     .land-see-blockquote p {
       font-size: 1.625rem;
@@ -3364,7 +3352,7 @@ limitations under the License.
     <script type="application/json">
   {
     "vars": {
-      "account": "469952699"  // Replace with your property ID.
+      "account": "UA-XXXXX-Y"  // Replace with your property ID.
     },
     "triggers": {
       "trackPageview": {  // Trigger names can be any string. trackPageview is not a required name.
