--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ limitations under the License.
   <title>MINNOWSPACE</title>
   <link rel="canonical" href="index.html" />
   <meta name="viewport" content="width=device-width" />
+  <meta name="google-adsense-account" content="ca-pub-3239465181490887">
   <meta name="amp-google-client-id-api" content="googleanalytics" />
   <meta name="description"
     content="MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
