--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ limitations under the License.
     data-cmp-host="c.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+  </script>
 <!-- AMP Analytics -->
 <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
@@ -3348,7 +3350,8 @@ limitations under the License.
 </head>
 
 <body class="land-see">
-
+<amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
+</amp-auto-ads>
 <!-- Google Tag Manager -->
 <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
   data-credentials="include"></amp-analytics>
